--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -15,7 +16,9 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/material": "^5.13.5",
     "@mui/x-date-pickers": "^6.8.0",
+    "@types/graceful-fs": "^4.1.6",
     "dayjs": "^1.11.8",
+    "graceful-fs": "^4.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.3.8"
@@ -34,6 +37,7 @@
     "tailwindcss": "^3.3.2",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vitest": "^0.32.2"
   }
 }
