--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graceful-fs": "^4.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
